<resources>
    <string name="app_name">Amoney</string>
    <string name="loan">Loan</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Purchasing policies protect the business when spending happens by outlining the standard for how employees handle company money. These rules govern things like:Spending authorization Who can sign checksHow the company bids jobsCompensation and Benefits Policies These rules clarify what employees receive or can earn if they adhere to the company spolicies.Credit/Late Payment PoliciesAnytime someone hires the company, a payment process should be written out detailing how the client receives a bill and the forms of payment accepted. These policies should clarify:The time allowed for paymentThe grace period allowedConsequences of late payment,Purchasing policies protect the business when spending happens by outlining the standard for how employees handle company money These rules govern things like Spending authorization Who can sign checksHow the company bids jobsCompensation and Benefits PoliciesThese rules clarify what employees receive or can earn if they adhere to the company spolicies.Credit/Late Payment PoliciesAnytime someone hires the company, a payment process should be written out detailing how the client receives a bill and the forms of payment accepted. These policies should clarify:The time allowed for paymentThe grace period allowedConsequences of late payment</string>
    <string name="apply">Apply</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Log In</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register">Register</string>
    <string name="connection_error">Check Internet Connection</string>
    <string name="enter_valid_password">Invalid Password</string>
    <string name="password_cnfpassword_error">Both passwords are not matching</string>
    <string name="blank_password_error">Password can\'t blank</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="enter_valid_mobileno">enter valid mobile number</string>
    <string name="basic_info">BASIC INFO</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="detail_address">Detail Address</string>
    <string name="zip_code">Pincode</string>
    <string name="email_id">Email id: </string>
    <string name="about">About Us</string>
    <string name="education">Education</string>
    <string name="student">Student</string>
    <string name="marital_status">Marital Status</string>
    <string name="industry">Industry</string>
    <string name="company_name">Company Name</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="current_residential_address">Current Residential Address</string>
    <string name="current_city">Current City</string>
    <string name="aadhaar_address">Aadhaar Address</string>
    <string name="aadhaar_city">Aadhaar City</string>
    <string name="state">State</string>
    <string name="aadhar_state">Aadhar State</string>
    <string name="marrital_select">Select Marrital Status</string>
    <string name="select_student">Is Student</string>
    <string name="relatives_details">Relatives Details</string>
    <string name="education_and_work_details">Educational or Work Details</string>
    <string name="relative_relation">Relation with relatives</string>
    <string name="relative_Name">Relative\'s name</string>
    <string name="relative_mobile">Relative\'s Mobile No</string>
    <string name="gender">Select Gender</string>
    <string name="pancard_no">Pancard No</string>
    <string name="aadhaar_no">Aadhar Card No</string>
    <string name="loan_records">Loan Records</string>
    <string name="follow_us">Follow Us</string>
    <string name="like_us">Like Us</string>
    <string name="log_out">Log Out</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="user_profile">User Profile</string>
    <string name="pancard_photo">Pancard photo</string>
    <string name="aadhar_card_front">Aadhar Card Front</string>
    <string name="aadhar_card_back">Aadhar Card Back</string>
    <string name="your_loan_nhas_been_approved">Your Loan \n has been disbursed.</string>
    <string name="blink_your_eyes_to_capture_image">Blink Your eyes to capture photo</string>
    <string name="No_data_found">No Loan Record Found</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_no">Account Number</string>
    <string name="cnf_account_no">Re-enter Account Number</string>
    <string name="bank_ifsc">IFSC code</string>
    <string name="loan_application_accepted_we_ll_review_your_application_and_we_ll_notify_soon">Loan Application Accepted.\n We\'ll review your application and we\'ll notify soon</string>
    <string name="loan_application_approved">Loan Application Approved.\n Please continue to get loan details and proceed application.</string>
    <string name="status">Status : </string>
    <string name="pending">Pending</string>
    <string name="facebook_app_id">1561048100711550</string>
    <string name="fb_login_protocol_scheme">fb1561048100711550</string>
    <string name="about_us">We, at Amoney understand your ever-changing needs and uncertainties life can throw at you like, medical emergencies, repairs, travel, meeting cash shortfalls for big-ticket purchases etc and hence we have designed this simple personal loan product with a loan limit of up to INR 50,000 keeping your needs in mind. Compared to the complicated and long application process in banks and other financial institutions, Amoney is quick and as easy as ordering a pizza!</string>
    <string name="continue_step">Continue</string>
    <string name="disbursement_amount">Disbursement Amount</string>
    <string name="Principal">Principal Amount</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="processing_fees">Processing Fees</string>
    <string name="processing_fees_gst">Processing Fees GST</string>
    <string name="processing_total">Total Processing Fees</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="overdue_rate">Overdue Rate</string>
    <string name="loan_term">Loan Term</string>
    <string name="loan_installment_num">Loan Installment Num</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="ok">OK</string>
    <string name="loan_reject_approved">Your loan application has been rejected.</string>
    <string name="correct_formate">Valid Photo</string>
    <string name="invalid_image">Invalid Photo</string>
    <string name="enable_gps">Enable GPS to Continue</string>
    <string name="signature">Signature</string>
    <string name="previous_loan_detail">View Loan List</string>
    <string name="repayment_details">Repayment Details</string>
    <string name="view_details">View Details</string>
    <string name="loan_application_details">Loan Application Details</string>
    <string name="download_view_pdf">Download/View Pdf</string>
    <string name="repayment_amount">Repayment Amount</string>
    <string name="repayment_status">Repayment Status</string>
    <string name="pendingStatus">Payment disbursment is pending</string>
    <string name="pendingPayment">Pending Payment</string>
    <string name="pay">Re-Pay</string>
    <string name="last_date_to_pay">Last date to re-pay</string>
    <string name="overdue_fees">Overdue Fees</string>
    <string name="photo_in_above_direction_will_be_accepted">Device in above orientation will be accepted.</string>
    <string name="photo_in_above_direction_will_not_be_accepted">Device in above orientation will not be accepted.</string>
    <string name="forget_password_click_here">forget Password? Click here</string>
    <string name="cancle_cheque">Cancle Cheque</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="otp">OTP</string>
    <string name="wait_for_otp_sim_card_should_be_in_same_device">Wait for Otp, Sim card should be in same device</string>
    <string name="total_pay">Total Repayment Amount</string>
    <string name="no_previous_loan_found">No Previous Loan Found</string>

</resources>
