<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/all_screen_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_full"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/enterPasswordET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#999"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ConfirmpasswordET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#999"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center_horizontal"
            android:text="Wait for OTP and Mobile Number should be in same mobile."/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/otp"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#999"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/resend_otp" />

        </LinearLayout>

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/forgetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_click_here"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/mainAppColor"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlur"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>